WordSelect: Spacing issue on row with punctuation

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
     background-origin: padding-box;
     background-size: auto auto;
     border: solid thin black;
-    margin: 0;
+    margin: 0 3px 0 3px;
     display: inline;
     white-space: nowrap;
     -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
